fixed paths on compute_true_dtw_similarity.ipynb

--- a/computation/similarity_values/true/compute_true_frechet_similarity_values.ipynb
+++ b/computation/similarity_values/true/compute_true_frechet_similarity_values.ipynb
@@ -14,9 +14,9 @@
         "parentdir = os.path.dirname(currentdir)\n",
         "sys.path.append(parentdir)\n",
         "\n",
-        "from utils.helpers import metafile_handler as mfh\n",
         "from utils.helpers import file_handler as fh\n",
-        "from utils.similarity_measures import frechet\n"
+        "from utils.helpers import metafile_handler as mfh\n",
+        "from utils.similarity_measures import frechet"
       ]
     },
     {
@@ -25,21 +25,19 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from constants import PORTO_OUTPUT_FOLDER, ROME_OUTPUT_FOLDER, SIMILARITIES_OUTPUT_FOLDER_PORTO, SIMILARITIES_OUTPUT_FOLDER_ROME, NUMBER_OF_TRAJECTORIES\n",
+        "NUMBER_OF_TRAJECTORIES = 50\n",
         "\n",
-        "DATA_ROME = f\"../{ROME_OUTPUT_FOLDER}/\"\n",
-        "TEST_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-50.txt\"\n",
-        "FULL_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
-        "SIMILARITIES_OUTPUT_FOLDER_ROME = f\"../{SIMILARITIES_OUTPUT_FOLDER_ROME}/\"\n",
-        "FRECHET_FILENAME_ROME = f\"rome-frechet-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
-        "FRECHET_FILENAME_TEST_ROME = \"rome-frechet-50.csv\"\n",
+        "#Rome\n",
+        "ROME_DATA_FOLDER  = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/dataset/rome/output\"\n",
+        "ROME_DATA = f\"../{ROME_DATA_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
+        "ROME_SIMILARITY_VALUES_RESULT_FOLDER = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/results_true/similarity_values/rome/frechet\"\n",
+        "ROME_DTW_FILENAME =  f\"rome-frechet-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
         "\n",
-        "DATA_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/\"\n",
-        "TEST_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-50.txt\"\n",
-        "FULL_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
-        "SIMILARITIES_OUTPUT_FOLDER_PORTO = f\"../{SIMILARITIES_OUTPUT_FOLDER_PORTO}/\"\n",
-        "FRECHET_FILENAME_PORTO = f\"porto-frechet-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
-        "FRECHET_FILENAME_TEST_PORTO = \"porto-frechet-50.csv\""
+        "#Porto\n",
+        "PORTO_DATA_FOLDER  = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/dataset/porto/output\"\n",
+        "PORTO_DATA = f\"../{PORTO_DATA_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
+        "PORTO_SIMILARITY_VALUES_RESULT_FOLDER = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/results_true/similarity_values/porto/frechet\"\n",
+        "PORTO_DTW_FILENAME =  f\"porto-frechet-{NUMBER_OF_TRAJECTORIES}.csv\""
       ]
     },
     {
