--- a/computation/similarity_values/true/compute_true_dtw_similarity_values.ipynb
+++ b/computation/similarity_values/true/compute_true_dtw_similarity_values.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -44,41 +44,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\dataset\\rome\\output/\n",
-            "C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\dataset\\rome\\output/META-50.txt\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "NUMBER_OF_TRAJECTORIES = 50\n",
         "\n",
+        "#Eivind\n",
         "#Rome\n",
-        "ROME_DATA_FOLDER = fr\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\dataset\\rome\\output/\"\n",
-        "\n",
+        "ROME_DATA_FOLDER = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\dataset\\rome\\output/\"\n",
         "ROME_DATA_META_FILE = f\"{ROME_DATA_FOLDER}META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
         "ROME_SIMILARITY_VALUES_RESULT_FOLDER = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\results_true\\similarity_values\\rome\\dtw\"\n",
         "ROME_DTW_FILENAME =  f\"rome-dtw-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
         "\n",
         "#Porto\n",
-        "PORTO_DATA_FOLDER  = \"dataset/porto/output\"\n",
-        "PORTO_DATA = f\"../{PORTO_DATA_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
+        "PORTO_DATA_FOLDER  = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\dataset\\porto\\output/\"\n",
+        "PORTO_DATA_META_FILE = f\"{PORTO_DATA_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
         "PORTO_SIMILARITY_VALUES_RESULT_FOLDER = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\results_true\\similarity_values\\porto\\dtw\"\n",
-        "PORTO_DTW_FILENAME =  f\"porto-dtw-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
-        "\n",
-        "print(ROME_DATA_FOLDER)\n",
-        "print(ROME_DATA_META_FILE)"
+        "PORTO_DTW_FILENAME =  f\"porto-dtw-{NUMBER_OF_TRAJECTORIES}.csv\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -95,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -122,7 +110,6 @@
         "    deleteFile(file_name, similarities_output_folder)\n",
         "\n",
         "    files = mfh.read_meta_file(meta_file)\n",
-        "    print(\"HER\" + files)\n",
         "    trajectories = fh.load_trajectory_files(files, data_folder)\n",
         "\n",
         "    df = dtw.cy_dtw_pool(trajectories)\n",
@@ -138,27 +125,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 15,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['R_CAV.txt', 'R_DYX.txt', 'R_CDU.txt', 'R_ECN.txt', 'R_EFS.txt', 'R_DOY.txt', 'R_CFV.txt', 'R_AVK.txt', 'R_EDS.txt', 'R_COQ.txt', 'R_AKY.txt', 'R_BCU.txt', 'R_CCZ.txt', 'R_CPD.txt', 'R_AVF.txt', 'R_AVD.txt', 'R_CYW.txt', 'R_AVB.txt', 'R_BNG.txt', 'R_DVK.txt', 'R_ADV.txt', 'R_EHK.txt', 'R_AKK.txt', 'R_BRF.txt', 'R_ARU.txt', 'R_DUB.txt', 'R_CEX.txt', 'R_DJT.txt', 'R_EBK.txt', 'R_CCQ.txt', 'R_AWU.txt', 'R_DGV.txt', 'R_BTH.txt', 'R_DUV.txt', 'R_AFZ.txt', 'R_EDX.txt', 'R_CIV.txt', 'R_ABU.txt', 'R_BDC.txt', 'R_BML.txt', 'R_ECP.txt', 'R_AZS.txt', 'R_BFS.txt', 'R_BUX.txt', 'R_CCJ.txt', 'R_CRC.txt', 'R_ARC.txt', 'R_DDN.txt', 'R_DAQ.txt', 'R_CNH.txt']\n",
-            "C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\dataset\\rome\\output/\n",
-            "Average DTW score for all pairs: 2.1615563297436338\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Test set\n",
-        "generate_dtw_similarities(\n",
-        "    ROME_DATA_FOLDER, ROME_DATA_META_FILE, ROME_DTW_FILENAME, ROME_SIMILARITY_VALUES_RESULT_FOLDER\n",
-        ")\n",
-        "# generate_parallell_dtw_similarities(\n",
+        "# generate_dtw_similarities(\n",
         "#     ROME_DATA_FOLDER, ROME_DATA_META_FILE, ROME_DTW_FILENAME, ROME_SIMILARITY_VALUES_RESULT_FOLDER\n",
         "# )\n",
+        "generate_parallell_dtw_similarities(\n",
+        "    ROME_DATA_FOLDER, ROME_DATA_META_FILE, ROME_DTW_FILENAME, ROME_SIMILARITY_VALUES_RESULT_FOLDER\n",
+        ")\n",
         "\n",
         "# Full set\n",
         "# generate_dtw_similarities(ROME_DATA_FOLDER, ROME_DATA_META_FILE, ROME_DTW_FILENAME, ROME_SIMILARITY_VALUES_RESULT_FOLDER)\n",
@@ -176,18 +153,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 12,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['P_DDI.txt', 'P_BZZ.txt', 'P_CYM.txt', 'P_CHB.txt', 'P_AKL.txt', 'P_DPQ.txt', 'P_BHP.txt', 'P_AMB.txt', 'P_CSS.txt', 'P_BUL.txt', 'P_DJY.txt', 'P_ABH.txt', 'P_ACO.txt', 'P_DBG.txt', 'P_BMH.txt', 'P_BVS.txt', 'P_BXB.txt', 'P_BGI.txt', 'P_DMP.txt', 'P_DPB.txt', 'P_EKW.txt', 'P_AIC.txt', 'P_EEJ.txt', 'P_DTV.txt', 'P_CWE.txt', 'P_BUH.txt', 'P_DXC.txt', 'P_AZS.txt', 'P_CDI.txt', 'P_CYZ.txt', 'P_BNI.txt', 'P_DTE.txt', 'P_BTK.txt', 'P_DDJ.txt', 'P_CUI.txt', 'P_DHH.txt', 'P_CUB.txt', 'P_BWI.txt', 'P_CXG.txt', 'P_BQL.txt', 'P_AKE.txt', 'P_DAK.txt', 'P_BXP.txt', 'P_AVW.txt', 'P_AWH.txt', 'P_AEE.txt', 'P_APJ.txt', 'P_CKP.txt', 'P_DHP.txt', 'P_DGV.txt']\n",
+            "C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\dataset\\porto\\output/\n",
+            "Average DTW score for all pairs: 1.13523941263307\n"
+          ]
+        }
+      ],
       "source": [
         "# DTW similarities for Porto\n",
         "# Test set\n",
-        "# generate_dtw_similarities(\n",
-        "#     DATA_PORTO,\n",
-        "#     TEST_SET_PORTO,\n",
-        "#     DTW_FILENAME_TEST_PORTO,\n",
-        "#     SIMILARITIES_OUTPUT_FOLDER_PORTO,\n",
-        "# )\n",
+        "generate_dtw_similarities(\n",
+        "    PORTO_DATA_FOLDER,\n",
+        "    PORTO_DATA_META_FILE,\n",
+        "    PORTO_DTW_FILENAME,\n",
+        "    PORTO_SIMILARITY_VALUES_RESULT_FOLDER,\n",
+        ")\n",
         "# generate_parallell_dtw_similarities(\n",
         "#     DATA_PORTO,\n",
         "#     TEST_SET_PORTO,\n",
