--- a/computation/similarity_values/true/compute_true_frechet_similarity_values.ipynb
+++ b/computation/similarity_values/true/compute_true_frechet_similarity_values.ipynb
@@ -27,16 +27,31 @@
       "source": [
         "NUMBER_OF_TRAJECTORIES = 50\n",
         "\n",
+        "#Thomas\n",
+        "# #Rome\n",
+        "# ROME_DATA_FOLDER  = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/dataset/rome/output\"\n",
+        "# ROME_DATA = f\"../{ROME_DATA_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
+        "# ROME_SIMILARITY_VALUES_RESULT_FOLDER = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/results_true/similarity_values/rome/frechet\"\n",
+        "# ROME_DTW_FILENAME =  f\"rome-frechet-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
+        "\n",
+        "# #Porto\n",
+        "# PORTO_DATA_FOLDER  = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/dataset/porto/output\"\n",
+        "# PORTO_DATA = f\"../{PORTO_DATA_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
+        "# PORTO_SIMILARITY_VALUES_RESULT_FOLDER = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/results_true/similarity_values/porto/frechet\"\n",
+        "# PORTO_DTW_FILENAME =  f\"porto-frechet-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
+        "\n",
+        "\n",
+        "#Eivind\n",
         "#Rome\n",
-        "ROME_DATA_FOLDER  = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/dataset/rome/output\"\n",
-        "ROME_DATA = f\"../{ROME_DATA_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
-        "ROME_SIMILARITY_VALUES_RESULT_FOLDER = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/results_true/similarity_values/rome/frechet\"\n",
+        "ROME_DATA_FOLDER = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\dataset\\rome\\output/\"\n",
+        "ROME_DATA_META_FILE = f\"{ROME_DATA_FOLDER}META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
+        "ROME_SIMILARITY_VALUES_RESULT_FOLDER = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\results_true\\similarity_values\\rome\\frechet\"\n",
         "ROME_DTW_FILENAME =  f\"rome-frechet-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
         "\n",
         "#Porto\n",
-        "PORTO_DATA_FOLDER  = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/dataset/porto/output\"\n",
-        "PORTO_DATA = f\"../{PORTO_DATA_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
-        "PORTO_SIMILARITY_VALUES_RESULT_FOLDER = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/results_true/similarity_values/porto/frechet\"\n",
+        "PORTO_DATA_FOLDER  = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\dataset\\porto\\output/\"\n",
+        "PORTO_DATA_META_FILE = f\"{PORTO_DATA_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
+        "PORTO_SIMILARITY_VALUES_RESULT_FOLDER = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\results_true\\similarity_values\\porto\\frechet\"\n",
         "PORTO_DTW_FILENAME =  f\"porto-frechet-{NUMBER_OF_TRAJECTORIES}.csv\""
       ]
     },
