Add text to notebooks

--- a/computation/similarity_values/true/compute_true_dtw_similarity_values.ipynb
+++ b/computation/similarity_values/true/compute_true_dtw_similarity_values.ipynb
@@ -1,18 +1,17 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": 7,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Project root found: c:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\n"
-          ]
-        }
-      ],
+      "source": [
+        "# Notebook for computing **TRUE DTW Similarities for Rome and Porto** "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "# Importing nescessary modules\n",
         "import os, sys\n",
@@ -43,30 +42,44 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## CONSTANTS"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [],
       "source": [
         "NUMBER_OF_TRAJECTORIES = 50\n",
         "\n",
-        "#Eivind\n",
         "#Rome\n",
-        "ROME_DATA_FOLDER = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\dataset\\rome\\output/\"\n",
+        "ROME_DATA_FOLDER = \"../../../dataset/rome/output/\"\n",
         "ROME_DATA_META_FILE = f\"{ROME_DATA_FOLDER}META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
-        "ROME_SIMILARITY_VALUES_RESULT_FOLDER = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\results_true\\similarity_values\\rome\\dtw\"\n",
+        "ROME_SIMILARITY_VALUES_RESULT_FOLDER = \"../../../results_true/similarity_values/rome/dtw\"\n",
         "ROME_DTW_FILENAME =  f\"rome-dtw-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
         "\n",
+        "\n",
         "#Porto\n",
-        "PORTO_DATA_FOLDER  = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\dataset\\porto\\output/\"\n",
+        "PORTO_DATA_FOLDER  = \"../../../dataset/porto/output/\"\n",
         "PORTO_DATA_META_FILE = f\"{PORTO_DATA_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
-        "PORTO_SIMILARITY_VALUES_RESULT_FOLDER = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\results_true\\similarity_values\\porto\\dtw\"\n",
+        "PORTO_SIMILARITY_VALUES_RESULT_FOLDER = \"../../../results_true/similarity_values/porto/dtw\"\n",
         "PORTO_DTW_FILENAME =  f\"porto-dtw-{NUMBER_OF_TRAJECTORIES}.csv\""
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## FUNCTIONS"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -83,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -120,16 +133,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# DTW similarities for Rome\n"
+        "# DTW SIMILARITIES FOR ROME\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Test set\n",
         "# generate_dtw_similarities(\n",
         "#     ROME_DATA_FOLDER, ROME_DATA_META_FILE, ROME_DTW_FILENAME, ROME_SIMILARITY_VALUES_RESULT_FOLDER\n",
         "# )\n",
@@ -148,39 +160,29 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# DTW similarities for Porto\n"
+        "# DTW SIMILARITIES FOR PORTO\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 64,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['P_DDI.txt', 'P_BZZ.txt', 'P_CYM.txt', 'P_CHB.txt', 'P_AKL.txt', 'P_DPQ.txt', 'P_BHP.txt', 'P_AMB.txt', 'P_CSS.txt', 'P_BUL.txt', 'P_DJY.txt', 'P_ABH.txt', 'P_ACO.txt', 'P_DBG.txt', 'P_BMH.txt', 'P_BVS.txt', 'P_BXB.txt', 'P_BGI.txt', 'P_DMP.txt', 'P_DPB.txt', 'P_EKW.txt', 'P_AIC.txt', 'P_EEJ.txt', 'P_DTV.txt', 'P_CWE.txt', 'P_BUH.txt', 'P_DXC.txt', 'P_AZS.txt', 'P_CDI.txt', 'P_CYZ.txt', 'P_BNI.txt', 'P_DTE.txt', 'P_BTK.txt', 'P_DDJ.txt', 'P_CUI.txt', 'P_DHH.txt', 'P_CUB.txt', 'P_BWI.txt', 'P_CXG.txt', 'P_BQL.txt', 'P_AKE.txt', 'P_DAK.txt', 'P_BXP.txt', 'P_AVW.txt', 'P_AWH.txt', 'P_AEE.txt', 'P_APJ.txt', 'P_CKP.txt', 'P_DHP.txt', 'P_DGV.txt']\n",
-            "C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\dataset\\porto\\output/\n",
-            "Average DTW score for all pairs: 1.13523941263307\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# DTW similarities for Porto\n",
         "# Test set\n",
-        "generate_dtw_similarities(\n",
+        "# generate_dtw_similarities(\n",
+        "#     PORTO_DATA_FOLDER,\n",
+        "#     PORTO_DATA_META_FILE,\n",
+        "#     PORTO_DTW_FILENAME,\n",
+        "#     PORTO_SIMILARITY_VALUES_RESULT_FOLDER,\n",
+        "# )\n",
+        "generate_parallell_dtw_similarities(\n",
         "    PORTO_DATA_FOLDER,\n",
         "    PORTO_DATA_META_FILE,\n",
         "    PORTO_DTW_FILENAME,\n",
         "    PORTO_SIMILARITY_VALUES_RESULT_FOLDER,\n",
         ")\n",
-        "# generate_parallell_dtw_similarities(\n",
-        "#     DATA_PORTO,\n",
-        "#     TEST_SET_PORTO,\n",
-        "#     DTW_FILENAME_TEST_PORTO,\n",
-        "#     SIMILARITIES_OUTPUT_FOLDER_PORTO,\n",
-        "# )\n",
         "\n",
         "# Full set\n",
         "# generate_dtw_similarities(\n",
