--- a/computation/similarity_values/true/compute_true_frechet_similarity_values.ipynb
+++ b/computation/similarity_values/true/compute_true_frechet_similarity_values.ipynb
@@ -1,8 +1,15 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Notebook for computing **TRUE FRECHET Similarities for Rome and Porto** "
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -10,54 +17,69 @@
         "import os, sys\n",
         "import shutil\n",
         "\n",
-        "currentdir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
-        "parentdir = os.path.dirname(currentdir)\n",
-        "sys.path.append(parentdir)\n",
+        "def find_project_root(target_folder=\"masteroppgave\"):\n",
+        "    \"\"\"Find the absolute path of a folder by searching upward.\"\"\"\n",
+        "    currentdir = os.path.abspath(\"__file__\")  # Get absolute script path\n",
+        "    while True:\n",
+        "        if os.path.basename(currentdir) == target_folder:\n",
+        "            return currentdir  # Found the target folder\n",
+        "        parentdir = os.path.dirname(currentdir)\n",
+        "        if parentdir == currentdir:  # Stop at filesystem root\n",
+        "            return None\n",
+        "        currentdir = parentdir  # Move one level up\n",
+        "\n",
+        "project_root = find_project_root(\"masteroppgave\")\n",
+        "\n",
+        "if project_root:\n",
+        "    sys.path.append(project_root)\n",
+        "    print(f\"Project root found: {project_root}\")\n",
+        "else:\n",
+        "    raise RuntimeError(\"Could not find 'masteroppgave' directory\")\n",
         "\n",
         "from utils.helpers import file_handler as fh\n",
         "from utils.helpers import metafile_handler as mfh\n",
-        "from utils.similarity_measures import frechet"
+        "from utils.similarity_measures import dtw, frechet"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## CONSTANTS"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
         "NUMBER_OF_TRAJECTORIES = 50\n",
         "\n",
-        "#Thomas\n",
-        "# #Rome\n",
-        "# ROME_DATA_FOLDER  = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/dataset/rome/output\"\n",
-        "# ROME_DATA = f\"../{ROME_DATA_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
-        "# ROME_SIMILARITY_VALUES_RESULT_FOLDER = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/results_true/similarity_values/rome/frechet\"\n",
-        "# ROME_DTW_FILENAME =  f\"rome-frechet-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
-        "\n",
-        "# #Porto\n",
-        "# PORTO_DATA_FOLDER  = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/dataset/porto/output\"\n",
-        "# PORTO_DATA = f\"../{PORTO_DATA_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
-        "# PORTO_SIMILARITY_VALUES_RESULT_FOLDER = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/results_true/similarity_values/porto/frechet\"\n",
-        "# PORTO_DTW_FILENAME =  f\"porto-frechet-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
-        "\n",
-        "\n",
-        "#Eivind\n",
         "#Rome\n",
-        "ROME_DATA_FOLDER = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\dataset\\rome\\output/\"\n",
+        "ROME_DATA_FOLDER = \"../../../dataset/rome/output/\"\n",
         "ROME_DATA_META_FILE = f\"{ROME_DATA_FOLDER}META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
-        "ROME_SIMILARITY_VALUES_RESULT_FOLDER = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\results_true\\similarity_values\\rome\\frechet\"\n",
-        "ROME_DTW_FILENAME =  f\"rome-frechet-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
+        "ROME_SIMILARITY_VALUES_RESULT_FOLDER = \"../../../results_true/similarity_values/rome/frechet\"\n",
+        "ROME_FRECHET_FILENAME =  f\"rome-frechet-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
+        "\n",
         "\n",
         "#Porto\n",
-        "PORTO_DATA_FOLDER  = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\dataset\\porto\\output/\"\n",
+        "PORTO_DATA_FOLDER  = \"../../../dataset/porto/output/\"\n",
         "PORTO_DATA_META_FILE = f\"{PORTO_DATA_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
-        "PORTO_SIMILARITY_VALUES_RESULT_FOLDER = r\"C:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\\results_true\\similarity_values\\porto\\frechet\"\n",
-        "PORTO_DTW_FILENAME =  f\"porto-frechet-{NUMBER_OF_TRAJECTORIES}.csv\""
+        "PORTO_SIMILARITY_VALUES_RESULT_FOLDER = \"../../../results_true/similarity_values/porto/frechet\"\n",
+        "PORTO_FRECHET_FILENAME =  f\"porto-frechet-{NUMBER_OF_TRAJECTORIES}.csv\""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## FUNCTIONS"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -74,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -82,17 +104,17 @@
         "\n",
         "\n",
         "# NOTE - Is not in use due to extensive computation time for non parallel version.\n",
-        "def generate_frechet_similarities(\n",
-        "    data_folder: str, meta_file: str, file_name: str, similarities_output_folder: str\n",
-        "):\n",
-        "    deleteFile(file_name, similarities_output_folder)\n",
+        "# def generate_frechet_similarities(\n",
+        "#     data_folder: str, meta_file: str, file_name: str, similarities_output_folder: str\n",
+        "# ):\n",
+        "#     deleteFile(file_name, similarities_output_folder)\n",
         "\n",
-        "    files = mfh.read_meta_file(meta_file)\n",
-        "    trajectories = fh.load_trajectory_files(files, data_folder)\n",
+        "#     files = mfh.read_meta_file(meta_file)\n",
+        "#     trajectories = fh.load_trajectory_files(files, data_folder)\n",
         "\n",
-        "    df = frechet.cy_frechet(trajectories)\n",
+        "#     df = frechet.cy_frechet(trajectories)\n",
         "\n",
-        "    df.to_csv(os.path.join(similarities_output_folder, file_name))\n",
+        "#     df.to_csv(os.path.join(similarities_output_folder, file_name))\n",
         "\n",
         "\n",
         "def generate_parallell_frechet_similarities(\n",
@@ -111,41 +133,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Frechet similarities for Rome\n"
+        "## FRECHET SIMILARITIES FOR ROME\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Cy Pool Frechet: 0/100\n",
-            "Cy Pool Frechet: 5/100\n",
-            "Cy Pool Frechet: 10/100\n",
-            "Cy Pool Frechet: 15/100\n",
-            "Cy Pool Frechet: 20/100\n",
-            "Cy Pool Frechet: 25/100\n",
-            "Cy Pool Frechet: 30/100\n",
-            "Cy Pool Frechet: 35/100\n",
-            "Cy Pool Frechet: 40/100\n",
-            "Cy Pool Frechet: 45/100\n",
-            "Cy Pool Frechet: 50/100\n",
-            "Cy Pool Frechet: 55/100\n",
-            "Cy Pool Frechet: 60/100\n",
-            "Cy Pool Frechet: 65/100\n",
-            "Cy Pool Frechet: 70/100\n",
-            "Cy Pool Frechet: 75/100\n",
-            "Cy Pool Frechet: 80/100\n",
-            "Cy Pool Frechet: 85/100\n",
-            "Cy Pool Frechet: 90/100\n",
-            "Cy Pool Frechet: 95/100\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Test set\n",
         "# generate_parallell_frechet_similarities(\n",
@@ -157,7 +152,7 @@
         "\n",
         "# Full set\n",
         "generate_parallell_frechet_similarities(\n",
-        "    DATA_ROME, FULL_SET_ROME, FRECHET_FILENAME_ROME, SIMILARITIES_OUTPUT_FOLDER_ROME\n",
+        "    ROME_DATA_FOLDER, ROME_DATA_META_FILE, ROME_FRECHET_FILENAME, ROME_SIMILARITY_VALUES_RESULT_FOLDER\n",
         ")"
       ]
     },
@@ -165,41 +160,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Frechet similarities for Porto\n"
+        "## FRECHET SIMILARITIES FOR PORTO\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Cy Pool Frechet: 0/100\n",
-            "Cy Pool Frechet: 5/100\n",
-            "Cy Pool Frechet: 10/100\n",
-            "Cy Pool Frechet: 15/100\n",
-            "Cy Pool Frechet: 20/100\n",
-            "Cy Pool Frechet: 25/100\n",
-            "Cy Pool Frechet: 30/100\n",
-            "Cy Pool Frechet: 35/100\n",
-            "Cy Pool Frechet: 40/100\n",
-            "Cy Pool Frechet: 45/100\n",
-            "Cy Pool Frechet: 50/100\n",
-            "Cy Pool Frechet: 55/100\n",
-            "Cy Pool Frechet: 60/100\n",
-            "Cy Pool Frechet: 65/100\n",
-            "Cy Pool Frechet: 70/100\n",
-            "Cy Pool Frechet: 75/100\n",
-            "Cy Pool Frechet: 80/100\n",
-            "Cy Pool Frechet: 85/100\n",
-            "Cy Pool Frechet: 90/100\n",
-            "Cy Pool Frechet: 95/100\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Test set\n",
         "# generate_parallell_frechet_similarities(\n",
@@ -211,14 +179,14 @@
         "\n",
         "# Full set\n",
         "generate_parallell_frechet_similarities(\n",
-        "    DATA_PORTO, FULL_SET_PORTO, FRECHET_FILENAME_PORTO, SIMILARITIES_OUTPUT_FOLDER_PORTO\n",
+        "    PORTO_DATA_FOLDER, PORTO_DATA_META_FILE, PORTO_FRECHET_FILENAME, PORTO_SIMILARITY_VALUES_RESULT_FOLDER\n",
         ")"
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "master",
       "language": "python",
       "name": "python3"
     },
@@ -232,7 +200,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.7"
+      "version": "3.13.0"
     }
   },
   "nbformat": 4,
