Calculate frechet and dtw on datasets

--- a/computation/similarity_values/true/compute_true_frechet_similarity_values.ipynb
+++ b/computation/similarity_values/true/compute_true_frechet_similarity_values.ipynb
@@ -9,9 +9,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Project root found: /Users/thomasnitsche/Developer/skole/master/masteroppgave\n"
+          ]
+        }
+      ],
       "source": [
         "# Importing nescessary modules\n",
         "import os, sys\n",
@@ -50,11 +58,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
-        "NUMBER_OF_TRAJECTORIES = 50\n",
+        "NUMBER_OF_TRAJECTORIES = 300\n",
         "\n",
         "#Rome\n",
         "ROME_DATA_FOLDER = \"../../../dataset/rome/output/\"\n",
@@ -79,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -96,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -138,9 +146,76 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Cy Pool Frechet: 0/300\n",
+            "Cy Pool Frechet: 5/300\n",
+            "Cy Pool Frechet: 10/300\n",
+            "Cy Pool Frechet: 15/300\n",
+            "Cy Pool Frechet: 20/300\n",
+            "Cy Pool Frechet: 25/300\n",
+            "Cy Pool Frechet: 30/300\n",
+            "Cy Pool Frechet: 35/300\n",
+            "Cy Pool Frechet: 40/300\n",
+            "Cy Pool Frechet: 45/300\n",
+            "Cy Pool Frechet: 50/300\n",
+            "Cy Pool Frechet: 55/300\n",
+            "Cy Pool Frechet: 60/300\n",
+            "Cy Pool Frechet: 65/300\n",
+            "Cy Pool Frechet: 70/300\n",
+            "Cy Pool Frechet: 75/300\n",
+            "Cy Pool Frechet: 80/300\n",
+            "Cy Pool Frechet: 85/300\n",
+            "Cy Pool Frechet: 90/300\n",
+            "Cy Pool Frechet: 95/300\n",
+            "Cy Pool Frechet: 100/300\n",
+            "Cy Pool Frechet: 105/300\n",
+            "Cy Pool Frechet: 110/300\n",
+            "Cy Pool Frechet: 115/300\n",
+            "Cy Pool Frechet: 120/300\n",
+            "Cy Pool Frechet: 125/300\n",
+            "Cy Pool Frechet: 130/300\n",
+            "Cy Pool Frechet: 135/300\n",
+            "Cy Pool Frechet: 140/300\n",
+            "Cy Pool Frechet: 145/300\n",
+            "Cy Pool Frechet: 150/300\n",
+            "Cy Pool Frechet: 155/300\n",
+            "Cy Pool Frechet: 160/300\n",
+            "Cy Pool Frechet: 165/300\n",
+            "Cy Pool Frechet: 170/300\n",
+            "Cy Pool Frechet: 175/300\n",
+            "Cy Pool Frechet: 180/300\n",
+            "Cy Pool Frechet: 185/300\n",
+            "Cy Pool Frechet: 190/300\n",
+            "Cy Pool Frechet: 195/300\n",
+            "Cy Pool Frechet: 200/300\n",
+            "Cy Pool Frechet: 205/300\n",
+            "Cy Pool Frechet: 210/300\n",
+            "Cy Pool Frechet: 215/300\n",
+            "Cy Pool Frechet: 220/300\n",
+            "Cy Pool Frechet: 225/300\n",
+            "Cy Pool Frechet: 230/300\n",
+            "Cy Pool Frechet: 235/300\n",
+            "Cy Pool Frechet: 240/300\n",
+            "Cy Pool Frechet: 245/300\n",
+            "Cy Pool Frechet: 250/300\n",
+            "Cy Pool Frechet: 255/300\n",
+            "Cy Pool Frechet: 260/300\n",
+            "Cy Pool Frechet: 265/300\n",
+            "Cy Pool Frechet: 270/300\n",
+            "Cy Pool Frechet: 275/300\n",
+            "Cy Pool Frechet: 280/300\n",
+            "Cy Pool Frechet: 285/300\n",
+            "Cy Pool Frechet: 290/300\n",
+            "Cy Pool Frechet: 295/300\n"
+          ]
+        }
+      ],
       "source": [
         "# Test set\n",
         "# generate_parallell_frechet_similarities(\n",
