--- a/computation/similarity_values/true/compute_true_dtw_similarity_values.ipynb
+++ b/computation/similarity_values/true/compute_true_dtw_similarity_values.ipynb
@@ -9,9 +9,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Project root found: /Users/thomasnitsche/Developer/skole/master/masteroppgave\n"
+          ]
+        }
+      ],
       "source": [
         "# Importing nescessary modules\n",
         "import os, sys\n",
@@ -50,11 +58,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
-        "NUMBER_OF_TRAJECTORIES = 50\n",
+        "NUMBER_OF_TRAJECTORIES = 3000\n",
         "\n",
         "#Rome\n",
         "ROME_DATA_FOLDER = \"../../../dataset/rome/output/\"\n",
@@ -79,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -96,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -138,9 +146,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 3050/3050 [30:36<00:00,  1.66it/s]\n"
+          ]
+        }
+      ],
       "source": [
         "# generate_dtw_similarities(\n",
         "#     ROME_DATA_FOLDER, ROME_DATA_META_FILE, ROME_DTW_FILENAME, ROME_SIMILARITY_VALUES_RESULT_FOLDER\n",
@@ -157,6 +173,15 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "NUMBER_OF_TRAJECTORIES = 3000"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -165,9 +190,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "Exception",
+          "evalue": "Cant find file ../../../dataset/porto/output//META-3050.txt",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "File \u001b[0;32m~/Developer/skole/master/masteroppgave/utils/helpers/metafile_handler.py:127\u001b[0m, in \u001b[0;36mread_meta_file\u001b[0;34m(path_to_file)\u001b[0m\n\u001b[1;32m    126\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 127\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpath_to_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m    128\u001b[0m         trajectory_files \u001b[38;5;241m=\u001b[39m [line\u001b[38;5;241m.\u001b[39mrstrip() \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m file]\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../../../dataset/porto/output//META-3050.txt'",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[7], line 9\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# DTW similarities for Porto\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# Test set\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# generate_dtw_similarities(\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#     PORTO_SIMILARITY_VALUES_RESULT_FOLDER,\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# )\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[43mgenerate_parallell_dtw_similarities\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[43mPORTO_DATA_FOLDER\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m    \u001b[49m\u001b[43mPORTO_DATA_META_FILE\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[43m    \u001b[49m\u001b[43mPORTO_DTW_FILENAME\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[43m    \u001b[49m\u001b[43mPORTO_SIMILARITY_VALUES_RESULT_FOLDER\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# Full set\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# generate_dtw_similarities(\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m#     DATA_PORTO, FULL_SET_PORTO, DTW_FILENAME_PORTO, SIMILARITIES_OUTPUT_FOLDER_PORTO\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m#     DATA_PORTO, FULL_SET_PORTO, DTW_FILENAME_PORTO, SIMILARITIES_OUTPUT_FOLDER_PORTO\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# )\u001b[39;00m\n",
+            "Cell \u001b[0;32mIn[4], line 23\u001b[0m, in \u001b[0;36mgenerate_parallell_dtw_similarities\u001b[0;34m(data_folder, meta_file, file_name, similarities_output_folder)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mgenerate_parallell_dtw_similarities\u001b[39m(\n\u001b[1;32m     19\u001b[0m     data_folder: \u001b[38;5;28mstr\u001b[39m, meta_file: \u001b[38;5;28mstr\u001b[39m, file_name: \u001b[38;5;28mstr\u001b[39m, similarities_output_folder: \u001b[38;5;28mstr\u001b[39m\n\u001b[1;32m     20\u001b[0m ):\n\u001b[1;32m     21\u001b[0m     deleteFile(file_name, similarities_output_folder)\n\u001b[0;32m---> 23\u001b[0m     files \u001b[38;5;241m=\u001b[39m \u001b[43mmfh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_meta_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmeta_file\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m     trajectories \u001b[38;5;241m=\u001b[39m fh\u001b[38;5;241m.\u001b[39mload_trajectory_files(files, data_folder)\n\u001b[1;32m     26\u001b[0m     df \u001b[38;5;241m=\u001b[39m dtw\u001b[38;5;241m.\u001b[39mcy_dtw_pool(trajectories)\n",
+            "File \u001b[0;32m~/Developer/skole/master/masteroppgave/utils/helpers/metafile_handler.py:131\u001b[0m, in \u001b[0;36mread_meta_file\u001b[0;34m(path_to_file)\u001b[0m\n\u001b[1;32m    129\u001b[0m         file\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m    130\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m:\n\u001b[0;32m--> 131\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m (\u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCant find file \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath_to_file\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m    133\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m trajectory_files\n",
+            "\u001b[0;31mException\u001b[0m: Cant find file ../../../dataset/porto/output//META-3050.txt"
+          ]
+        }
+      ],
       "source": [
         "# DTW similarities for Porto\n",
         "# Test set\n",
@@ -196,7 +239,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "master_repo",
+      "display_name": "master",
       "language": "python",
       "name": "python3"
     },
